<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp">

    <ImageButton
        android:id="@+id/btn_organizer_invited_back"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintEnd_toStartOf="@+id/tv_organizer_invited_header"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow" />

    <TextView
        android:id="@+id/tv_organizer_invited_header"
        style="@style/MainHeaderTextviewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Invited"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="700dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_container"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_organizer_invited_header"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_organizer_invited_size_header"
            style="@style/MainHeaderTextviewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Invited"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_organizer_invited_size"
            style="@style/MainHeaderTextviewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="0"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_organizer_invited_size_header" />

        <Button
            android:id="@+id/btn_organizer_invited_select"
            style="@style/RoundedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:text="Select"
            android:textColor="?attr/colorSecondary"
            android:textColorLink="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/lv_organizer_invited_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_organizer_invited_select"
            app:layout_constraintVertical_bias="0.0">

        </ListView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Floating Bottom Action Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_floating_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnSecondary"
        android:padding="10dp"
        android:paddingBottom="24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_send_notification"
            style="@style/RoundedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:text="Send Notification"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btn_done"
            app:layout_constraintEnd_toStartOf="@+id/btn_organizer_invited_uninvite"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_organizer_invited_uninvite"
            style="@style/RoundedButton"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/red"
            android:text="Uninvite"
            app:layout_constraintBottom_toTopOf="@+id/btn_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_send_notification" />

        <Button
            android:id="@+id/btn_done"
            style="@style/RoundedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#CDDC39"
            android:text="Done"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>