...
    <!-- Row Content Container -->
    <LinearLayout
        android:id="@+id/ll_entrant_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/cb_entrant_select"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_organizer_entrantList_item_number"
            style="@style/MainHeaderTextviewStyle"
...
